--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/components/*": ["components/*"],
       "@/types/*": ["types/*"],
+      "@/utils/*": ["utils/*"],
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
